confiuração para o token expirar após 1 hora e também ajustei a lista de pedidos que o nome do produto não estava aparecendo